--- a/SSDI.RequestMonitoring.UI/JComponents/Cards/DetailsRow__Card.razor.css
+++ b/SSDI.RequestMonitoring.UI/JComponents/Cards/DetailsRow__Card.razor.css
@@ -21,6 +21,11 @@
     word-break: break-word;
 }
 
+    .details__row-value.valuebreak {
+        white-space: pre-line;
+        word-break: break-word;
+    }
+
 
 @media (max-width: 768px) {
     .details__row-content {
