--- a/SSDI.RequestMonitoring.UI/Layout/Navbar.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/Navbar.razor
@@ -33,7 +33,7 @@
                         <div class="user-info">
                             <strong>@currentUser.FullName</strong>
                             <span>@currentUser.RoleDesc</span>
-                            <small>@currentUser.Username</small>
+                            @* <small>@currentUser.Username</small> *@
                         </div>
                     </div>
 
