--- a/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Index.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Index.razor
@@ -12,6 +12,7 @@
 @inject IDivisionSvc divisionSvc
 @inject IDepartmentSvc departmentSvc
 @inject ExportRequest export
+@inject HttpClient Http
 @attribute [Authorize]
 
 <PageTitle>Job Orders</PageTitle>
