--- a/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/PurchaseRequest_Index.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/PurchaseRequest_Index.razor
@@ -13,6 +13,7 @@
 @inject IDivisionSvc divisionSvc
 @inject IDepartmentSvc departmentSvc
 @inject ExportRequest export
+@inject HttpClient Http
 @attribute [Authorize]
 
 <PageTitle>Purchase Requests</PageTitle>
